<resources>
    <string name="app_name">UnderControl</string>
    <string name="accounts_text">Cuentas</string>
    <string name="categories_text">Categorías</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iv_account_description">Account Icon</string>
    <string name="ib_edit_description">Editar</string>
    <string name="ib_delete_description">Eliminar</string>
    <string name="add_category">Registrar Categoría</string>
    <string name="hint_category_name">Nombre de Categoría</string>
    <string name="name_text">Nombre</string>
    <string name="type_text">Tipo</string>
    <string name="income_text">Ingreso</string>
    <string name="expense_text">Gasto</string>
    <string name="edit_category">Editar Categoría</string>
    <string name="sign_in_text">Ingresar</string>
    <string name="create_account"><u>Crear cuenta.</u></string>
    <string name="sign_up_text">Registrarse</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="required">Campo obligatorio.</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="signin_failed">Nombre de usuario o contraseña incorrectas. Por favor intente de nuevo.</string>
    <string name="hint_account_name">Nombre de la Cuenta</string>
    <string name="balance_text">Saldo</string>
    <string name="hint_account_balance">Saldo de la cuenta</string>
    <string name="save">Guardar</string>
    <string name="update">Actualizar</string>
    <string name="edit_account">Editar Cuenta</string>
    <string name="add_account">Registrar Cuenta</string>
    <string name="home">Inicio</string>
    <string name="welcome">Bienvenido(a) %s</string>
    <string name="no_data">No hay registros.</string>
    <string name="add">Agregar</string>
    <string name="cancel">Cancelar</string>
    <string name="transactions">Transacciones</string>
    <string name="summary">Resumen</string>
    <string name="total_expenses">Total de gastos: %s</string>
    <string name="total_income">Total de ingresos: %s</string>
    <string name="summary_month">Resumen %s</string>
    <string name="transfers">Transferencias</string>
    <string name="edit_movement">Editar Movimiento</string>
    <string name="add_movement">Registrar Movimiento</string>
    <string name="hint_movement_description">Descripción del movimiento</string>
    <string name="description">Descripción</string>
    <string name="amount">Monto</string>
    <string name="hint_amount">Monto del movimiento</string>
    <string name="movement_date">Fecha del movimiento</string>
    <string name="dateFormat">yyyy-MM-dd</string>
    <string name="category">Categoría</string>
    <string name="origin_account">Cuenta origen</string>
    <string name="destination_account">Cuenta Destino</string>
    <string name="option_default">-- Seleccione una opción --</string>
    <string name="transfer_format"><![CDATA[%s -> %s]]></string>
</resources>