<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/tvDescription"
        style="@style/TextViewForm"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="@id/glTop" />

    <EditText
        android:id="@+id/etDescription"
        style="@style/EditTextForm"
        android:autofillHints="name"
        android:hint="@string/hint_movement_description"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <TextView
        android:id="@+id/tvAmount"
        style="@style/TextViewForm"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

    <EditText
        android:id="@+id/etAmount"
        style="@style/EditTextForm"
        android:autofillHints="false"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvAmount" />

    <TextView
        android:id="@+id/tvDate"
        style="@style/TextViewForm"
        android:text="@string/movement_date"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/etAmount" />

    <EditText
        android:id="@+id/etDate"
        style="@style/EditTextForm"
        android:autofillHints="false"
        android:hint="@string/dateFormat"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <TextView
        android:id="@+id/tvOriginAccount"
        style="@style/TextViewForm"
        android:text="@string/origin_account"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/etDate" />

    <Spinner
        android:id="@+id/spOriginAccount"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvOriginAccount" />

    <!--<Spinner
        android:id="@+id/spCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.0" />-->

    <TextView
        android:id="@+id/tvType"
        style="@style/TextViewForm"
        android:text="@string/type_text"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@id/spOriginAccount" />

    <RadioGroup
        android:id="@+id/rgType"
        style="@style/EditTextForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvType">

        <RadioButton
            android:id="@+id/rbIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/income_text"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/expense_text"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvCategory"
        style="@style/TextViewForm"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/rgType" />

    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

    <TextView
        android:id="@+id/tvDestinationAccount"
        style="@style/TextViewForm"
        android:text="@string/destination_account"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/spCategory" />

    <Spinner
        android:id="@+id/spDestinationAccount"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvDestinationAccount" />



</androidx.constraintlayout.widget.ConstraintLayout>