<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.AddCategoryFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/tvCategoryName"
        style="@style/TextViewForm"
        android:text="@string/name_text"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="@id/glTop" />

    <EditText
        android:id="@+id/etCategoryName"
        style="@style/EditTextForm"
        android:hint="@string/hint_category_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoryName" />

    <TextView
        android:id="@+id/tvCategoryType"
        style="@style/TextViewForm"
        android:layout_marginTop="32dp"
        android:text="@string/type_text"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@id/etCategoryName" />

    <RadioGroup
        android:id="@+id/rgCategoryType"
        android:layout_marginTop="-10dp"
        style="@style/EditTextForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoryType">

        <RadioButton
            android:id="@+id/rbIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:text="@string/income_text" />

        <RadioButton
            android:id="@+id/rbExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:text="@string/expense_text" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSave"
        app:layout_constraintBottom_toBottomOf="@+id/glBottom"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        android:text="@string/add_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>