<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.SignUpFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up_text"
        android:textColor="@color/violet_700"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextViewForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/etFirstName"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/first_name"
            android:inputType="text" />

        <TextView
            style="@style/TextViewForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/etLastName"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/last_name"
            android:inputType="text" />

        <TextView
            style="@style/TextViewForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/etUserName"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/username"
            android:inputType="text" />

        <TextView
            style="@style/TextViewForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/ButtonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>